changed page color

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #448858;
+  background-color: #1699eb;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
