--- a/src/App.css
+++ b/src/App.css
@@ -6,37 +6,39 @@
 }
 
 .about-button {
-  font: bold 15px Arial;
+  font-family: "Zebraesq";
   text-decoration: none;
   background-color: #dcdada;
   padding: 10px 10px;
   border-radius: 38%;
   box-shadow: 0 15px 15px rgba(0, 0, 0, 0.3);
-	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-	border-top: 1px solid rgba(255, 255, 255, 0.1);
 	border-radius: 35px;
 	overflow: hidden;
+  color: black;
 }
 
 .home-button {
-  font: bold 15px Arial;
+  font-family: "Zebraesq";
   text-decoration: none;
   background-color: #dcdada;
   border-radius: 38%;
   padding: 10px 10px;
   box-shadow: 0 15px 15px rgba(0, 0, 0, 0.3);
-	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-	border-top: 1px solid rgba(255, 255, 255, 0.1);
 	border-radius: 35px;
 	overflow: hidden;
+  color: black;
 }
 
-ul li { 
-  display: inline-block; 
-  padding: 10px 30px;  
-  margin-right: 400px; 
-} 
+.welcome{
+  font-family: "Zebraesq";
+  margin: 70px;
+}
 
+.descript{
+  font-family: "Zebraesq";
+  margin: 70px;
+}
+ 
 .footer {
 	font-weight: bold;
 	background-color: rgb(0, 0, 0);
@@ -46,21 +48,20 @@ ul li {
   text-align: center;
 }
 
+.links img {
+  max-width: 55%;
+  max-height: 55%;
+  box-shadow: 0 15px 15px rgba(0, 0, 0, 0.5);
+  border-radius: 35px;
+}
 
-.links p img {
-  max-width: 50%;
-  max-height: 50%;
-  display:inline-block;
-	box-shadow: 0 15px 15px rgba(0, 0, 0, 0.3);
-	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-	border-top: 1px solid rgba(255, 255, 255, 0.1);
-	border-radius: 35px;
-	overflow: hidden;
+.links p {
+  display: inline-block;
 }
 
 .site-logo {
-  width: 200px; 
-  height: 150px; 
+  width: 210px; 
+  height: 160px; 
 }
 
 .navigate {
@@ -78,6 +79,7 @@ ul li {
   align-items: center;
   font-size: calc(10px + 2vmin);
   color: rgb(0, 0, 0);
+  margin-bottom: 30px;
 }
 
 .App-link {
