--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,7 @@
 	padding: 0.3cm;
   margin-top: auto;
   text-align: center;
-  font-family: "Villa";
+  font-family: "Zebraesq";
 }
 
 .footer-info { 
